--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -31,7 +31,6 @@ node('container') {
   )
 
   docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu --privileged') {
-
     stage('Preparation') {
       sh 'rm -rf ~/.m2 || true'
       sh 'rm -rf openvidu || true'
@@ -58,8 +57,8 @@ node('container') {
       '''.stripIndent())
     }
 
-    stage('Artifacts build') {
-      parallel openviduBrowser: {
+    stage('Artifacts build 1') {
+      parallel 'OpenVidu Browser build': {
           stage('OpenVidu Browser build') {
             sh(script: '''#!/bin/bash -xe
               cd openvidu
@@ -73,7 +72,7 @@ node('container') {
               git checkout -f $OPENVIDU_COMMIT
             '''.stripIndent())
           }
-      }, openviduNodeClient: {
+      }, 'OpenVidu Node Client build': {
           stage('OpenVidu Node Client build') {
             sh(script: '''#!/bin/bash -xe
               cd openvidu
@@ -87,7 +86,7 @@ node('container') {
               git checkout -f $OPENVIDU_COMMIT
             '''.stripIndent())
           }
-      }, openviduJavaClient: {
+      }, 'OpenVidu Java Client build': {
           stage('OpenVidu Java Client build') {
             sh(script: '''#!/bin/bash -xe
               cd openvidu
@@ -105,31 +104,31 @@ node('container') {
       }
     }
 
-    stage('OpenVidu TestApp build') {
-      sh(script: '''#!/bin/bash -xe
-        cd openvidu
-        if [[ $OPENVIDU_TESTAPP_COMMIT != "default" ]]; then
-          git checkout -f $OPENVIDU_TESTAPP_COMMIT
-        fi
-        cd openvidu-testapp
-        npm install --unsafe-perm
-        npm install /opt/openvidu/openvidu-browser-*.tgz
-        npm install /opt/openvidu/openvidu-node-client-*.tgz
-        export NG_CLI_ANALYTICS="false" && ./node_modules/@angular/cli/bin/ng build --prod --output-path=/opt/openvidu/testapp
-        cd ..
-        git checkout -f $OPENVIDU_COMMIT
-      '''.stripIndent())
-    }
-
-    stage('OpenVidu parent build') {
-      sh(script: '''#!/bin/bash -xe
-        if [[ $KURENTO_JAVA_COMMIT != "default" ]]; then
-          cd kurento-java && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
-          cd ../openvidu && mvn --batch-mode versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
-        fi
-      '''.stripIndent())
-      sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST'
-      sh 'cd openvidu && mvn --batch-mode -DskipTests=true clean install'
+    stage('Artifacts build 2') {
+      parallel 'OpenVidu TestApp build': {
+        sh(script: '''#!/bin/bash -xe
+          cd openvidu
+          if [[ $OPENVIDU_TESTAPP_COMMIT != "default" ]]; then
+            git checkout -f $OPENVIDU_TESTAPP_COMMIT
+          fi
+          cd openvidu-testapp
+          npm install --unsafe-perm
+          npm install /opt/openvidu/openvidu-browser-*.tgz
+          npm install /opt/openvidu/openvidu-node-client-*.tgz
+          export NG_CLI_ANALYTICS="false" && ./node_modules/@angular/cli/bin/ng build --prod --output-path=/opt/openvidu/testapp
+          cd ..
+          git checkout -f $OPENVIDU_COMMIT
+        '''.stripIndent())
+      }, 'OpenVidu parent build': {
+          sh(script: '''#!/bin/bash -xe
+          if [[ $KURENTO_JAVA_COMMIT != "default" ]]; then
+            cd kurento-java && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+            cd ../openvidu && mvn --batch-mode versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
+          fi
+        '''.stripIndent())
+        sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST'
+        sh 'cd openvidu && mvn --batch-mode -DskipTests=true clean install'
+      }
     }
 
     stage('OpenVidu Server unit tests') {
