--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -61,44 +61,29 @@ node('container') {
       parallel 'OpenVidu Browser build': {
         stage('OpenVidu Browser build') {
           sh(script: '''#!/bin/bash -xe
-            cd openvidu
-            if [[ $OPENVIDU_BROWSER_COMMIT != "default" ]]; then
-              git checkout -f $OPENVIDU_BROWSER_COMMIT
-            fi
-            cd openvidu-browser
+            cd openvidu/openvidu-browser
             npm install --unsafe-perm && npm run build && npm pack
             cp openvidu-browser-*.tgz /opt/openvidu
             cd ..
-            git checkout -f $OPENVIDU_COMMIT
           '''.stripIndent())
         }
       }, 'OpenVidu Node Client build': {
         stage('OpenVidu Node Client build') {
           sh(script: '''#!/bin/bash -xe
-            cd openvidu
-            if [[ $OPENVIDU_NODE_CLIENT_COMMIT != "default" ]]; then
-              git checkout -f $OPENVIDU_NODE_CLIENT_COMMIT
-            fi
-            cd openvidu-node-client
+            cd openvidu/openvidu-node-client
             npm install --unsafe-perm && npm run build && npm pack
             cp openvidu-node-client-*.tgz /opt/openvidu
             cd ..
-            git checkout -f $OPENVIDU_COMMIT
           '''.stripIndent())
         }
       }, 'OpenVidu Java Client build': {
         stage('OpenVidu Java Client build') {
           sh(script: '''#!/bin/bash -xe
-            cd openvidu
-            if [[ $OPENVIDU_JAVA_CLIENT_COMMIT != "default" ]]; then
-              git checkout -f $OPENVIDU_JAVA_CLIENT_COMMIT
-            fi
-            cd openvidu-java-client
+            cd openvidu/openvidu-java-client
             mvn --batch-mode versions:set -DnewVersion=TEST
             mvn clean compile package
             mvn install:install-file -Dfile=target/openvidu-java-client-TEST.jar -DgroupId=io.openvidu -DartifactId=openvidu-java-client -Dversion=TEST -Dpackaging=jar
             cd ..
-            git checkout -f $OPENVIDU_COMMIT
           '''.stripIndent())
         }
       }
@@ -108,17 +93,12 @@ node('container') {
       parallel 'OpenVidu TestApp build': {
         stage('OpenVidu TestApp build') {
           sh(script: '''#!/bin/bash -xe
-          cd openvidu
-          if [[ $OPENVIDU_TESTAPP_COMMIT != "default" ]]; then
-            git checkout -f $OPENVIDU_TESTAPP_COMMIT
-          fi
-          cd openvidu-testapp
+          cd openvidu/openvidu-testapp
           npm install --unsafe-perm
           npm install /opt/openvidu/openvidu-browser-*.tgz
           npm install /opt/openvidu/openvidu-node-client-*.tgz
           export NG_CLI_ANALYTICS="false" && ./node_modules/@angular/cli/bin/ng build --prod --output-path=/opt/openvidu/testapp
           cd ..
-          git checkout -f $OPENVIDU_COMMIT
         '''.stripIndent())
         }
       }, 'OpenVidu parent build': {
@@ -242,11 +222,7 @@ def openViduE2ETest(mediaServer) {
   script {
     env.mediaServer = mediaServer
     sh(script: '''#!/bin/bash -xe
-      cd openvidu
-      if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
-        git checkout -f $OPENVIDU_TESTE2E_COMMIT
-      fi
-      cd openvidu-test-browsers
+      cd openvidu/openvidu-test-browsers
       mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean install
       cd ..
       mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST
@@ -254,7 +230,6 @@ def openViduE2ETest(mediaServer) {
       cd openvidu-test-e2e
       mvn -DskipTests=true clean install
       sudo mvn --batch-mode -DMEDIA_SERVER=${mediaServer} -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DREMOTE_URL_OPERA=http://172.17.0.1:6668/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
-      git checkout -f $OPENVIDU_COMMIT
     '''.stripIndent())
   }
 }
