--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -148,6 +148,8 @@ node('container') {
           } finally {
             // Kill all environment for next test
             environmentStop()
+            junit 'openvidu/openvidu-test-e2e/**/target/surefire-reports/TEST-*.xml'
+            archiveArtifacts artifacts: '**/openvidu-server-*.log'
           }
 
           // ----
