--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -42,7 +42,7 @@ node('container') {
           git clone https://github.com/Kurento/kurento-java.git
           cd kurento-java
           git checkout -f $KURENTO_JAVA_COMMIT
-          mvn --batch-mode clean install
+          mvn -B -ntp clean install
         fi
       '''.stripIndent())
       sh(script: '''#!/bin/bash -xe
@@ -82,9 +82,9 @@ node('container') {
         stage('OpenVidu Java Client build') {
           sh(script: '''#!/bin/bash -xe
             cd openvidu/openvidu-java-client
-            mvn --batch-mode versions:set -DnewVersion=TEST
-            mvn --batch-mode clean compile package
-            mvn --batch-mode install:install-file -Dfile=target/openvidu-java-client-TEST.jar -DgroupId=io.openvidu -DartifactId=openvidu-java-client -Dversion=TEST -Dpackaging=jar
+            mvn -B -ntp versions:set -DnewVersion=TEST
+            mvn -B -ntp clean compile package
+            mvn -B -ntp install:install-file -Dfile=target/openvidu-java-client-TEST.jar -DgroupId=io.openvidu -DartifactId=openvidu-java-client -Dversion=TEST -Dpackaging=jar
           '''.stripIndent())
         }
       }
@@ -105,18 +105,18 @@ node('container') {
         stage('OpenVidu parent build') {
           sh(script: '''#!/bin/bash -xe
             if [[ $KURENTO_JAVA_COMMIT != "default" ]]; then
-              cd kurento-java && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
-              cd ../openvidu && mvn --batch-mode versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
+              cd kurento-java && MVN_VERSION=$(mvn -B -ntp -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+              cd ../openvidu && mvn -B -ntp versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
             fi
           '''.stripIndent())
-          sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST'
-          sh 'cd openvidu && mvn --batch-mode -DskipTests=true clean install'
+          sh 'cd openvidu && mvn -B -ntp versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST'
+          sh 'cd openvidu && mvn -B -ntp -DskipTests=true clean install'
         }
         stage('OpenVidu Server unit tests') {
-          sh 'cd openvidu/openvidu-server && mvn --batch-mode -Dtest=io.openvidu.server.test.unit.*Test test'
+          sh 'cd openvidu/openvidu-server && mvn -B -ntp -Dtest=io.openvidu.server.test.unit.*Test test'
         }
         stage('OpenVidu Server integration tests') {
-          sh 'cd openvidu/openvidu-server && mvn --batch-mode -Dtest=io.openvidu.server.test.integration.*Test test'
+          sh 'cd openvidu/openvidu-server && mvn -B -ntp -Dtest=io.openvidu.server.test.integration.*Test test'
         }
         stage('OpenVidu Server build') {
           sh(script: '''#!/bin/bash -xe
@@ -125,7 +125,7 @@ node('container') {
             npm install /opt/openvidu/openvidu-browser-*.tgz --quiet
             export NG_CLI_ANALYTICS="false" && npm run build-prod --quiet
             cd ../..
-            mvn --batch-mode package
+            mvn -B -ntp package
             cp target/openvidu-server*.jar /opt/openvidu
           '''.stripIndent())
         }
@@ -237,13 +237,13 @@ def openViduE2ETest(mediaServer) {
     env.mediaServer = mediaServer
     sh(script: '''#!/bin/bash -xe
       cd openvidu/openvidu-test-browsers
-      mvn --batch-mode versions:set -DnewVersion=TEST && mvn --batch-mode clean install
+      mvn -B -ntp versions:set -DnewVersion=TEST && mvn -B -ntp clean install
       cd ..
-      mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST
-      mvn --batch-mode versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
+      mvn -B -ntp versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST
+      mvn -B -ntp versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
       cd openvidu-test-e2e
-      mvn --batch-mode -DskipTests=true clean install
-      sudo mvn --batch-mode -DMEDIA_SERVER=${mediaServer} -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DREMOTE_URL_OPERA=http://172.17.0.1:6668/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
+      mvn -B -ntp -DskipTests=true clean install
+      sudo mvn -B -ntp -DMEDIA_SERVER=${mediaServer} -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DREMOTE_URL_OPERA=http://172.17.0.1:6668/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
     '''.stripIndent())
   }
 }
