--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 node('container') {
   sh 'docker rm -f e2e chrome firefox opera mediasoup || true'
-  sh 'rm -rf /opt/openvidu/* || true'
+  sh 'sudo rm -rf /opt/openvidu/removable/* || true'
   parallel (
     'Download fake video': {
       sh(script: '''#!/bin/bash -xe
@@ -51,7 +51,7 @@ node('container') {
     }
   )
 
-  docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu -v /opt/openvidu/.m2:/root/.m2 --privileged') {
+  docker.image('openvidu/openvidu-test-e2e:$DISTRO').inside('--name e2e -p 4200:4200 -p 4443:4443 -p 5555:5555 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu/removable:/opt/openvidu -v /opt/openvidu/.m2:/root/.m2 --privileged') {
     stage('Preparation') {
       sh 'rm -rf ~/.m2/repository/io/openvidu || true'
       sh 'rm -rf ~/.m2/repository/org/kurento || true'
